# pd-data-analysis

./: 241111_SMS발송통계_test.ipynb  241114_SMS발송통계_visualization.ipynb  README.md  hello_visualization.ipynb  pyproject.toml
data/: es_smsLog.xlsx  es_smsLog_20241120.xlsx
