[tool.poetry]
name = "pd-data-analysis"
version = "0.1.0"
description = ""
authors = ["ybnoh82 <ybnoh@plandocs.co.kr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
ipykernel = "^6.29.5"
python-dotenv = "^1.0.1"
pandas = "^2.2.3"
matplotlib = "^3.9.2"
seaborn = "^0.13.2"
nbformat = "^5.10.4"
plotly = "^5.24.1"
requests = "^2.32.3"
beautifulsoup4 = "^4.12.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
